--- a/api-reference/core-apis/assertions.mdx
+++ b/api-reference/core-apis/assertions.mdx
@@ -1,157 +1,302 @@
 ---
 title: "Assertions Reference"
-description: "Detailed documentation of all built-in assertion macros and functions in GoogleTest. Learn how to check values, handle exceptions, and structure test validation for both fatal and non-fatal scenarios."
+description: "Detailed overview of all core assertion macros provided by GoogleTest. Includes usage of equality, exception, fatal/non-fatal, predicate, and other assertion types, with explanations of result semantics and diagnostic output."
 ---
 
 # Assertions Reference
 
-Detailed documentation of all built-in assertion macros and functions in GoogleTest. Learn how to check values, handle exceptions, and structure test validation for both fatal and non-fatal scenarios.
+This page lists the core assertion macros provided by GoogleTest for verifying code behavior in your C++ tests. To use these assertions, include `#include <gtest/gtest.h>`.
+
+GoogleTest assertions broadly come in pairs of `EXPECT_` macros (non-fatal failures, test continues) and `ASSERT_` macros (fatal failures, abort current function). You can append custom failure messages to assertions using the stream operator `<<` for more informative diagnostics.
 
 ---
 
-## Overview of GoogleTest Assertions
+## Explicit Success and Failure
 
-GoogleTest provides a rich set of **assertion macros** that enable you to verify expected outcomes in your tests. Assertions allow you to check the state of values, validate conditions, and ensure your code behaves as intended.
+These assertions directly generate successes or failures independent of any condition.
 
-At its core, an assertion checks a condition or compares values. If the assertion fails, GoogleTest will report it and depending on the assertion, it may either continue running the test or stop immediately.
+### SUCCEED()
 
-> Typical use cases include checking:
-> - Equality and inequality of values
-> - Boolean conditions
-> - Exception throwing and catching
-> - Floating-point comparisons
->
-> GoogleTest assertion macros are designed to give clear, human-readable failure messages, helping you quickly diagnose test failures.
-
----
-
-## Assertion Categories
-
-GoogleTest assertions fall into **fatal** and **non-fatal** categories, supporting diverse validation flows:
-
-| Category       | Behavior                                  | Common Macros (Examples)           |
-|----------------|-------------------------------------------|----------------------------------|
-| Fatal          | Stops test execution on failure           | `ASSERT_EQ`, `ASSERT_TRUE`, `ASSERT_THROW` |
-| Non-fatal      | Records failure but continues test         | `EXPECT_EQ`, `EXPECT_TRUE`, `EXPECT_THROW` |
-
-Use **fatal assertions** when further test code depends on assumptions that must hold. Use **non-fatal assertions** when you want to collect multiple failures in one test.
-
----
-
-## Common Assertion Macros
-
-### Value Checks
-
-- **Equality and Inequality:**
-  ```cpp
-  ASSERT_EQ(expected, actual);  // Fatal
-  EXPECT_NE(val1, val2);        // Non-fatal
-  ```
-
-- **Boolean Conditions:**
-  ```cpp
-  EXPECT_TRUE(condition);       // Non-fatal
-  ASSERT_FALSE(condition);      // Fatal
-  ```
-
-- **Null Checks:**
-  ```cpp
-  EXPECT_NULL(ptr);             // Non-fatal, expects null pointer
-  ASSERT_NOT_NULL(ptr);         // Fatal, expects not-null pointer
-  ```
-
-### Floating-point Comparisons
-
-- Use specialized checks to avoid pitfalls with floating-point precision.
+- Generates a success outcome for the current test.
+- Does **not** cause the test to pass by itself; it merely records a passing assertion.
+- Mainly used for documentation or future-proofing tests.
 
 ```cpp
-EXPECT_FLOAT_EQ(expected_float, actual_float);
-ASSERT_NEAR(expected_value, actual_value, abs_error);
+SUCCEED();
 ```
 
-### Exception Tests
+### FAIL()
 
-- To verify whether code throws expected exceptions:
+- Generates a **fatal failure** and aborts the current function immediately.
+- Only usable in `void` functions.
 
 ```cpp
-EXPECT_THROW(statement, ExceptionType);
-ASSERT_NO_THROW(statement);
+FAIL() << "Unexpected control flow reached";
 ```
 
-This lets you specify correctness of exceptional behavior explicitly.
+### ADD_FAILURE()
 
----
-
-## Writing Custom Assertions
-
-GoogleTest allows defining your own assertions for complex test conditions, returning informative messages. Use the `ASSERT_TRUE()` family or define predicate assertions with detailed diagnostics. Custom assertions enhance test expressivity and clarity.
-
----
-
-## Practical Tips for Using Assertions
-
-- **Be specific but not brittle:** Only verify what's necessary to confirm correctness.
-- **Use non-fatal expectations when multiple checks are needed:** Collect all failures in one test run.
-- **Leverage exception assertions thoughtfully:** To verify robust error handling.
-- **Prefer typed assertions:** Use `ASSERT_EQ` over manually comparing values to improve failure output clarity.
-
----
-
-## Troubleshooting Common Assertion Issues
-
-- **Unexpected test abort:** You likely used a fatal assertion (`ASSERT_*`) where non-fatal (`EXPECT_*`) was intended.
-- **Confusing failure messages:** Use typed assertions to get detailed mismatch diagnostics.
-- **Tests passing unexpectedly:** Ensure assertions are actually executed and not skipped.
-
----
-
-## Examples
-
-### Basic Equality Check
+- Generates a **non-fatal failure** allowing the current function to continue running.
+- Can be used to signal an unexpected condition without halting test execution.
 
 ```cpp
-TEST(MyTestSuite, BasicEquality) {
-  int result = CalculateSum(2, 3);
-  ASSERT_EQ(5, result);  // Fatal: test aborts if result != 5
+ADD_FAILURE() << "Condition failed";
+```
+
+### ADD_FAILURE_AT(file_path, line_number)
+
+- Generates a non-fatal failure at a **specific** source file and line.
+- Useful when the failing condition is remote from the current location.
+
+```cpp
+ADD_FAILURE_AT("foo.cc", 42) << "Value inconsistent";
+```
+
+
+## Boolean Condition Assertions
+
+Test general boolean expressions.
+
+### EXPECT_TRUE(condition) / ASSERT_TRUE(condition)
+
+- Succeeds if `condition` is true.
+- `EXPECT_` variant continues on failure; `ASSERT_` aborts.
+
+```cpp
+EXPECT_TRUE(is_sorted(vec));
+ASSERT_TRUE(ptr != nullptr);
+```
+
+### EXPECT_FALSE(condition) / ASSERT_FALSE(condition)
+
+- Succeeds if `condition` is false.
+- Same behavior distinctions as above.
+
+```cpp
+EXPECT_FALSE(has_error);
+ASSERT_FALSE(is_empty(container));
+```
+
+## Binary Comparison Assertions
+
+Test that two values satisfy relational policies.
+
+These macros require their arguments to be comparable with the underlying operator. Each macro supports streaming custom failure messages.
+
+| Assertion | Meaning                           |
+|-----------|---------------------------------|
+| EXPECT_EQ / ASSERT_EQ(val1, val2)   | Checks `val1 == val2`               |
+| EXPECT_NE / ASSERT_NE(val1, val2)   | Checks `val1 != val2`               |
+| EXPECT_LT / ASSERT_LT(val1, val2)   | Checks `val1 < val2`                |
+| EXPECT_LE / ASSERT_LE(val1, val2)   | Checks `val1 <= val2`               |
+| EXPECT_GT / ASSERT_GT(val1, val2)   | Checks `val1 > val2`                |
+| EXPECT_GE / ASSERT_GE(val1, val2)   | Checks `val1 >= val2`               |
+
+```cpp
+EXPECT_EQ(result, expected);
+ASSERT_LT(value, upper_bound);
+```
+
+### Note on Pointers and C strings
+- Pointer equality is tested for pointer assertions (e.g., `EXPECT_EQ`).
+- To compare C strings by content, use string comparison assertions (`EXPECT_STREQ`, etc.) instead.
+- When testing for null pointers, prefer `nullptr` over `NULL` for clarity.
+
+
+## String Comparison Assertions
+
+Specialized macros for comparing C strings (`const char*`, `wchar_t*`) by content rather than pointer equality.
+
+| Assertion     | Meaning                                               |
+|---------------|-------------------------------------------------------|
+| EXPECT_STREQ / ASSERT_STREQ(str1, str2)       | Checks that C strings have the same content       |
+| EXPECT_STRNE / ASSERT_STRNE(str1, str2)       | Checks that C strings differ in content           |
+| EXPECT_STRCASEEQ / ASSERT_STRCASEEQ(str1, str2) | Checks equality ignoring case                      |
+| EXPECT_STRCASENE / ASSERT_STRCASENE(str1, str2) | Checks inequality ignoring case                    |
+
+Example:
+
+```cpp
+EXPECT_STREQ("hello", my_str.c_str());
+ASSERT_STRNE(ptr1, ptr2);
+```
+
+Wide strings are supported equivalently, and UTF-8 encoding is used in failure messages.
+
+
+## Floating-Point Comparisons
+
+Because floating-point computations can incur rounding errors, exact comparisons are often unsuitable. GoogleTest provides assertions that allow tolerant, approximate equality based on Units in the Last Place (ULPs).
+
+| Assertion               | Description                                                                            |
+|-------------------------|----------------------------------------------------------------------------------------|
+| EXPECT_FLOAT_EQ / ASSERT_FLOAT_EQ(val1, val2)       | Checks for float values approximately equal within 4 ULPs                             |
+| EXPECT_DOUBLE_EQ / ASSERT_DOUBLE_EQ(val1, val2)     | Checks for double values approximately equal within 4 ULPs                            |
+| EXPECT_NEAR / ASSERT_NEAR(val1, val2, abs_error)    | Checks if values are within absolute error bound                                      |
+
+Example:
+
+```cpp
+EXPECT_FLOAT_EQ(3.14f, computed_value);
+ASSERT_NEAR(computed_value, expected, 0.01);
+```
+
+
+## Exception Assertions
+
+Require exceptions enabled in build to verify exception behavior.
+
+| Assertion               | Description                                                      |
+|-------------------------|------------------------------------------------------------------|
+| EXPECT_THROW / ASSERT_THROW(statement, exception_type)  | Verifies `statement` throws the specified exception type         |
+| EXPECT_ANY_THROW / ASSERT_ANY_THROW(statement)          | Verifies `statement` throws any exception                        |
+| EXPECT_NO_THROW / ASSERT_NO_THROW(statement)            | Verifies `statement` does not throw any exception                |
+
+Example:
+
+```cpp
+EXPECT_THROW(Foo(), std::runtime_error);
+ASSERT_NO_THROW(ProcessData());
+```
+
+
+## Predicate Assertions
+
+Use predicates (functions or functors returning `bool` or `AssertionResult`) for expressive assertions with detailed failure messages.
+
+### EXPECT_PREDn / ASSERT_PREDn
+
+- `n` can be 1 to 5, representing arity.
+- Predicate is a function/functor returning `bool`.
+- Values passed are printed automatically when predicate fails.
+
+Example:
+
+```cpp
+bool IsEven(int n) { return (n % 2) == 0; }
+EXPECT_PRED1(IsEven, x);
+```
+
+### EXPECT_PRED_FORMATn / ASSERT_PRED_FORMATn
+
+- Predicate-formatters can produce rich failure messages.
+- The function signature includes argument expressions as `const char*` plus argument values.
+- Returns `AssertionResult` (success or failure with message).
+
+Example:
+
+```cpp
+testing::AssertionResult AssertIsEven(const char* expr, int n) {
+  if (n % 2 == 0) return testing::AssertionSuccess();
+  return testing::AssertionFailure() << expr << " is not even";
+}
+
+EXPECT_PRED_FORMAT1(AssertIsEven, x);
+```
+
+
+## Windows HRESULT Assertions
+
+Check if a Windows HRESULT indicates success or failure.
+
+| Assertion               | Purpose                         |
+|-------------------------|---------------------------------|
+| EXPECT_HRESULT_SUCCEEDED / ASSERT_HRESULT_SUCCEEDED(expr) | Checks if HRESULT signals success |
+| EXPECT_HRESULT_FAILED / ASSERT_HRESULT_FAILED(expr)       | Checks if HRESULT signals failure |
+
+Example:
+
+```cpp
+ASSERT_HRESULT_SUCCEEDED(com_ptr.CoCreateInstance(...));
+EXPECT_HRESULT_FAILED(FooMethod());
+```
+
+
+## Death Assertions
+
+Verify code blocks cause process termination.
+
+| Assertion               | Description                                                                              |
+|-------------------------|------------------------------------------------------------------------------------------|
+| EXPECT_DEATH / ASSERT_DEATH(statement, regex)              | Asserts statement causes non-zero exit and stderr matches regex                        |
+| EXPECT_DEATH_IF_SUPPORTED / ASSERT_DEATH_IF_SUPPORTED(...) | Same as above; no-op if death tests unsupported                                          |
+| EXPECT_DEBUG_DEATH / ASSERT_DEBUG_DEATH(...)               | Like death tests but only triggers in debug build                                       |
+| EXPECT_EXIT / ASSERT_EXIT(statement, predicate, regex)     | Asserts statement exits with code matching predicate and stderr matching regex         |
+
+Example:
+
+```cpp
+EXPECT_DEATH(Foo(42), "Error.*");
+EXPECT_EXIT(NormalExit(), testing::ExitedWithCode(0), "Success");
+```
+
+
+## Additional Notes
+
+- All assertions support streaming extra failure messages for better diagnostics using `<<`.
+- For string assertions, streaming wide strings outputs UTF-8 representations.
+- Use `ASSERT_` variants when continuing the test after failure doesn't make sense; otherwise, prefer `EXPECT_` to report multiple failures.
+- Predicate and predicate-format assertions enable detailed custom messages without awkward manual error streaming.
+
+---
+
+## Example Usage
+
+### Bool Check with Predicate Assertion
+
+```cpp
+// Predicate function
+bool IsEven(int n) {
+  return (n % 2) == 0;
+}
+
+// Test
+TEST(ExampleTest, IsEvenCheck) {
+  int value = 4;
+  EXPECT_PRED1(IsEven, value);
 }
 ```
 
-### Checking Exception Throw
+### String Equality with Custom Message
 
 ```cpp
-TEST(MyTestSuite, ThrowsOnInvalidInput) {
-  auto f = [] { ProcessInput(-1); };
-  EXPECT_THROW(f(), std::invalid_argument);  // Non-fatal
+TEST(ExampleTest, StrEquals) {
+  const char* expected = "hello";
+  const char* actual = GetString();
+  EXPECT_STREQ(expected, actual) << "Fetched string does not match expected.";
 }
 ```
 
-### Combining Multiple Expect Checks
+### Floating Point Approximate Equality
 
 ```cpp
-TEST(MyTestSuite, MultipleConditions) {
-  int x = GetValue();
-  EXPECT_GT(x, 0);
-  EXPECT_LT(x, 10);
-  EXPECT_NE(x, 5);
+TEST(MathTest, FloatComparison) {
+  float a = ComputeA();
+  float b = ComputeB();
+  EXPECT_FLOAT_EQ(a, b);
+  EXPECT_NEAR(a, b, 1e-4f);
+}
+```
+
+### Exception Assertion
+
+```cpp
+TEST(LogicTest, ThrowsOnInvalidInput) {
+  EXPECT_THROW(Process(-1), std::invalid_argument);
+}
+```
+
+### Death Test
+
+```cpp
+TEST(ApiDeathTest, InvalidUsageDie) {
+  ASSERT_DEATH({ UseApi(-1); }, "Invalid argument");
 }
 ```
 
 ---
 
-## Integration with GoogleMock
+For a full master list of assertions and usage details, see the [Assertions Reference](reference/assertions.md).
 
-While this page focuses on core assertions, assertions are integral in mock expectations and behaviors. Use assertions within mock method invocations for richer validation. Refer to the [Mocking Reference](https://github.com/google/googletest/blob/main/docs/reference/mocking.md) for how assertions fit in mocking workflows.
+For guidance on writing and managing tests, consult the [Testing Reference](reference/testing.md) and [GoogleTest Primer](primer.md).
 
----
-
-## See Also
-
-- [Matchers Reference](/api-reference/core-apis/matchers): Learn about argument matchers used to describe expected values.
-- [Mocking Reference](https://github.com/google/googletest/blob/main/docs/reference/mocking.md): Comprehensive guide on mocks, expectations, and actions.
-- [Using Assertions Effectively Guide](/guides/getting-started/using-assertions): Best practices for writing and using assertions.
-
----
-
-For detailed syntax, behaviors, and examples, explore the associated API reference and guides within the GoogleTest documentation suite.
-
----
